update to use export controls component

--- a/es5/index.html
+++ b/es5/index.html
@@ -17,12 +17,7 @@
 		<div class="jtk-demo-canvas">
 			<!-- controls -->
 			<div class="jtk-controls-container"></div>
-			<div class="jtk-export jtk-controls">
-				<span>Export:</span>
-				<i><a href="#" id="exportSvg">SVG</a></i>
-				<i><a href="#" id="exportPng">PNG</a></i>
-				<i><a href="#" id="exportJpg">JPG</a></i>
-			</div>
+			<div class="jtk-export"></div>
 			<!-- miniview -->
 			<div class="miniview"></div>
 		</div>
